--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
     <link rel="dns-prefetch" href="https://www.googletagmanager.com">
     <link rel="dns-prefetch" href="https://connect.facebook.net">
     
-    <!-- Google Fonts - Inter (otimizado com font-display: optional para evitar layout shift) -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=optional" rel="stylesheet" media="print" onload="this.media='all'; document.documentElement.classList.add('font-inter-loaded');">
-    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=optional" rel="stylesheet"></noscript>
+    <!-- Google Fonts - Inter (otimizado com font-display: swap para evitar CLS, mas renderizar rápido) -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" media="print" onload="this.media='all'; document.documentElement.classList.add('font-inter-loaded');">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"></noscript>
     <script>
       // Adicionar classe quando fonte carregar
       document.fonts.ready.then(function() {
