--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
 
         gtag('config', 'AW-17598053351');
 
-        // Microsoft Clarity (defer)
-
-
         // Meta Pixel (defer)
         !function (f, b, e, v, n, t, s) {
           if (f.fbq) return; n = f.fbq = function () {
@@ -130,6 +127,7 @@
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+      console.log('Clarity script loaded');
     })(window, document, "clarity", "script", "thhq3efjo4");
   </script>
 
